# boring-stack

./: .gitignore  CLAUDE.md  Dockerfile  LAYOUT_GUIDE.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.js  features.md  package-lock.json  package.json  playwright.config.ts  screens.yml  vite.config.ts  vitest.config.ts
.claude/: settings.json
app/: root.tsx  routes.ts
app/components/: all-todos-table.tsx  app-sidebar.tsx  confirm-dialog.tsx  expandable-text.tsx  list-pagination.tsx  projects-table.tsx  search-bar.tsx  todos-table.tsx
app/db/: client.ts  schema.ts
app/lib/: auth.server.ts  form-validation.ts  forms.ts  jobs.server.ts  routes.ts  schemas.ts  utils.test.ts
app/lib/py/: client.ts
app/routes/: _index.tsx  _layout.tsx  _protected.tsx  admin-user-edit.tsx  admin-user-new.tsx  admin-users.tsx  admin.users.tsx  analytics.tsx  api-auth.ts  api.projects.tsx  api.todos.tsx  dashboard.tsx  debug-py.tsx  login.tsx  my-todos.tsx  my-todos2.tsx  project-detail.tsx  projects-list.tsx  projects-new.tsx  projects.$id.tsx  projects.tsx  todo-detail.tsx  todo-edit.tsx  todos-list.tsx
app/routes/api/: create-project.ts  create-todo.ts  delete-project.ts  delete-todo.ts  update-project.ts  update-todo.ts
db/: app.db
db/migrations/: 0000_init.sql  0000_lovely_bulldozer.sql  0001_dashing_mindworm.sql
db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
docs/: COMPLETE-DOCUMENTATION.md  changing-python-port.md  deploy.md  principles.md  project-architecture.md  python-bridge.md  quick-start.md
prisma/: schema.prisma  seed.test.ts  seed.ts
prisma/migrations/0_init/: migration.sql
py/: .gitignore  Makefile  logger.py  main.py  pyproject.toml  start.sh
py/app/: app.py
py/notebooks/: 00_template.ipynb
scripts/: .session-cookies  autofix.sh  check-route-filenames.ts  check-routes.ts  curl-auth.sh  deploy.sh  dev.sh  fix.sh  frontmatter.ts  generate-from-template.ts  get-cookie.py  health-check.ts  kill_containers.sh  killport.sh  lint.sh  parse-features.ts  prod.sh  prod_build.sh  seed-user.ts  ssh.sh  sync-py.sh  sync-route-intents.ts  test.sh  verify-routes.ts  wait-for-db.ts  worker.ts
services/image2/: .gitignore  image.proto  main.py  pyproject.toml
templates/: README.md  blank-page.njk  detail-page.njk  detail-with-table.njk  form-all-inputs.njk  table-list-view.njk  table-only.njk
templates/configs/: my-todos2.json
tests/: auth.setup.ts  feature-30d9bb12-09d2-4f4c-b5f5-61399169e23b.spec.ts  feature-a6b1c7f1-160e-489d-b291-c286cb201cd4.spec.ts  project-e2e.spec.ts
