[project]
name = "image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "jupyter>=1.1.1",
    "pillow>=12.0.0",
    "python-multipart>=0.0.21",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 120
exclude = [".venv"]
src = ["app"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes - unused imports, undefined names
    "E",      # pycodestyle errors - only real errors
    "W",      # pycodestyle warnings - only real warnings
    "I",      # isort - import sorting
    "UP",     # pyupgrade - modernize syntax
    "B",      # flake8-bugbear - likely bugs
    "SIM",    # flake8-simplify - simplifications
]
ignore = [
    "E501",   # Line too long - handled by formatter, not linter
    "E402",   # Module import not at top - sometimes needed (e.g., logging init)
    "E731",   # Lambda assignment - sometimes useful
    "B008",   # Function call in default arg - common in FastAPI
]

[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = "3.12"  # or your version
# 1. Silence errors about third-party libraries not having type stubs
ignore_missing_imports = true
# 2. Do not force me to write type hints
disallow_untyped_defs = false
# 3. BUT, check the body of functions even if I didn't type-hint them
check_untyped_defs = true
# 4. Be lenient with None (Optional) types
no_implicit_optional = false
# 5. Keep the output clean
show_error_codes = true
pretty = true